Fix horizontal scroll

--- a/sandbox/social-media-bar/style.scss
+++ b/sandbox/social-media-bar/style.scss
@@ -28,6 +28,7 @@
     display: table-cell;
     margin: 0 1em;
     white-space: nowrap;
+    overflow: hidden;
 
     &:first-child {
       position: relative;
